# databricks_template

./: .gitignore  Makefile  README.md  pyproject.toml
databricks_boilerplate/: .env  config.py  main.py
databricks_boilerplate/domain/: catalog_objects.py
databricks_boilerplate/jobs/: base_job.py
databricks_boilerplate/tools/: actions.py  entities.py  job_tools.py  objects.py
tests/: conftest.py  save_data.py  test_base_job.py
tests/src/my_enriched_table/my_enriched_table/: .part-00013-c57ab899-f72d-4d35-98de-4b43e3d91999-c000.snappy.parquet.crc  .part-00015-c57ab899-f72d-4d35-98de-4b43e3d91999-c000.snappy.parquet.crc  part-00010-c57ab899-f72d-4d35-98de-4b43e3d91999-c000.snappy.parquet  part-00015-c57ab899-f72d-4d35-98de-4b43e3d91999-c000.snappy.parquet
tests/src/my_raw_table/my_raw_table/: .part-00000-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00001-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00002-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00003-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00004-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00005-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00006-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00007-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00008-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00009-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00010-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00011-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00012-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00013-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00014-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  .part-00015-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet.crc  part-00000-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00001-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00002-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00003-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00004-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00005-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00006-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00007-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00008-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00009-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00010-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00011-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00012-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00013-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00014-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet  part-00015-a56ffa0f-0118-4f27-a61e-89e986982cda-c000.snappy.parquet
